--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ nav ul li a:hover::after {
 .header-text h1 span {
   color: #b3844f;
 }
-/*----------------about--------------*/
+
 #about {
   padding: 80px 0;
   color: #ababab;
@@ -152,7 +152,6 @@ ul ul {
   margin-top: 6px;
 }
 
-/*----------------services--------------*/
 #services {
   padding: 30px 0;
 }
@@ -208,7 +207,7 @@ ul ul {
   color: #b3844f;
   font-weight: bold;
 }
-/*----------------Projets--------------*/
+
 #projets {
   padding: 50px 0;
 }
@@ -283,7 +282,7 @@ ul ul {
 .btn:hover {
   background: #b3844f;
 }
-/*----------------contact--------------*/
+
 .contact-left {
   flex-basis: 35%;
 }
@@ -353,7 +352,7 @@ form .btn2 {
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
-  flex-wrap: wrap; /* Pour le responsive */
+  flex-wrap: wrap;
   gap: 40px;
 }
 @media (max-width: 768px) {
@@ -366,7 +365,7 @@ form .btn2 {
     flex-basis: 100%;
   }
 }
-/*----------css for small screens----------------*/
+
 nav .fas {
   display: none;
 }
